Fix a bug when pawns were not assigned to the task